--- a/views/danhsach.ejs
+++ b/views/danhsach.ejs
@@ -37,7 +37,7 @@
             class="btn btn-success pull-right"
           >
             <i class="fa fa-plus"></i> Thêm mới</a
-          ><div class="text-right mt-3">
+          ><div class="text-right">
   <button id="save-all-courses" class="btn btn-primary">
     <i class="fa fa-save"></i> Lưu tất cả
   </button>
